@@ -92,6 +92,7 @@ and out_sig_item =
   | Osig_module of string * out_module_type * out_rec_status
   | Osig_type of out_type_decl * out_rec_status
   | Osig_value of string * out_type * string list
+  | Osig_ellipsis
 and out_type_decl =
   { otype_name: string;
     otype_params: (string * (bool * bool)) list;
